fix / grid items height, iOS - issue with `vh` units, childs with `%` units will not being set as   expected, ei:   - parent -> height: 100vh   - child -> height: 100%   child height will result on zero on iOS

--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -39,7 +39,7 @@
   width: 21vw;
   height: 21vh;
   position: relative;
-  border: 2px solid transparent;
+  margin: 2px;
 
   &:hover {
     .grid__item-cover {opacity: 1}
@@ -68,14 +68,14 @@
 }
 
 .grid__item-cover {
-  height: 100%;
+  height: 21vh;
   cursor: pointer;
   opacity: .75;
   transition: opacity 200ms ease;
 }
 
 .grid__item-cover-img {
-  position: relative;
+  height: 21vh;
   opacity: .08;
 }
 
